--- a/client/src/banners/banner.scss
+++ b/client/src/banners/banner.scss
@@ -56,3 +56,7 @@
     font-weight: 700;
   }
 }
+
+body.full-screen-overlay .mdn-cta-container {
+  display: none;
+}
