--- a/client/src/ui/organisms/article-actions/index.scss
+++ b/client/src/ui/organisms/article-actions/index.scss
@@ -18,6 +18,7 @@
   .article-actions-submenu {
     --gutter-padding: 1rem;
     display: none;
+    overflow: scroll;
 
     &.show {
       display: flex;
